@@ -123,6 +123,7 @@ sub get_gantt_resources_for_jobs_to_launch($$);
 sub get_gantt_resources_for_job($$);
 sub set_gantt_job_startTime($$$);
 sub update_gantt_visualization($);
+sub get_gantt_visu_resources_for_resa($$);
 
 # TIME CONVERSION
 sub ymdhms_to_sql($$$$$$);
@@ -146,6 +147,7 @@ sub check_event($$$);
 sub get_to_check_events($);
 sub get_hostname_event($$);
 sub get_job_events($$);
+sub get_events_for_hostname($$$);
 
 # ACCOUNTING
 sub check_accounting_update($$);
@@ -870,7 +872,6 @@ sub get_possible_wanted_resources($$$$$$$){
                                 });
     }
     
-    #print(Dumper(@wanted_resources));
     my $sql_where_string = "\'1\'";
     
     if ((defined($properties)) and ($properties ne "")){
@@ -884,8 +885,6 @@ sub get_possible_wanted_resources($$$$$$$){
     }
     chop($resource_string);
 
-    #print("$sql_where_string\n");
-    #print("$sql_in_string\n");
     my $sth = $dbh->prepare("SELECT $resource_string
                              FROM resources
                              WHERE
@@ -929,7 +928,6 @@ sub get_possible_wanted_resources($$$$$$$){
     }
     
     $sth->finish();
-    #print(Dumper($result));
     $result = oar_resource_tree::delete_tree_nodes_with_not_enough_resources($result);
 
     return($result);
@@ -994,7 +992,6 @@ sub add_micheline_job($$$$$$$$$$$$$$$$$$$$$$$$$){
     }
     $sth->finish();
     #Apply rules
-    #print "Admission rules => $rules \n";
     eval $rules;
     if ($@) {
         warn("Admission Rule ERROR : $@ \n");
@@ -1029,7 +1026,6 @@ sub add_micheline_job($$$$$$$$$$$$$$$$$$$$$$$$$){
                     $tmp_properties = "($tmp_properties) AND ($jobproperties)"
                 }
             }
-            #print(Dumper($r->{resources}));
             my $tree = get_possible_wanted_resources($dbh_ro, undef, $resource_id_list_vector, \@dead_resources, $tmp_properties, $r->{resources}, undef);
             if (!defined($tree)){
                 # Resource description does not match with the content of the database
@@ -1426,7 +1422,6 @@ sub archive_some_moldable_job_nodes($$$){
         $value_str .= ',';
     }
     chop($value_str);
-
     if ($Db_type eq "Pg"){
         $dbh->do("  UPDATE assigned_resources
                     SET
@@ -3425,13 +3420,9 @@ sub list_resource_properties_fields($){
     
     my $req;
     if ($Db_type eq "Pg"){
-        $req = "SELECT pg_attribute.attname AS field
-                FROM pg_class, pg_attribute
-                WHERE
-                    pg_class.relname = \'resources\'
-                    and pg_attribute.attnum > 0
-                    and pg_attribute.attrelid = pg_class.oid
-               ";
+
+				$req = "SELECT column_name AS field FROM information_schema.columns WHERE table_name = \'resources\'";
+
     }else{
         $req = "SHOW COLUMNS FROM resources";
     }
@@ -3486,7 +3477,6 @@ sub update_current_scheduler_priority($$$$$){
                     $value_str .= ',';
                 }
                 $sth->finish();
-
                 return if (!defined($value_str));
                 chop($value_str);
                 oar_Judas::oar_debug("Updating scheduler priority += ($value * $index) for $f in $value_str\n");
@@ -4361,7 +4351,7 @@ sub get_gantt_resources_for_jobs_to_launch($$){
 
 
 #Get resources for job in the gantt diagram
-#args : base, job id
+#args : base, moldable job id
 sub get_gantt_resources_for_job($$){
     my $dbh = shift;
     my $job = shift;
@@ -4383,7 +4373,7 @@ sub get_gantt_resources_for_job($$){
 
 
 #Get Alive resources for a job
-#args : base, job id
+#args : base, moldable job id
 sub get_gantt_Alive_resources_for_job($$){
     my $dbh = shift;
     my $job = shift;
@@ -4405,6 +4395,30 @@ sub get_gantt_Alive_resources_for_job($$){
     return(@res);
 }
 
+
+#Get network_address allocated to a (waiting) reservation
+#args : base, job id
+sub get_gantt_visu_resources_for_resa($$){
+    my $dbh = shift;
+    my $job = shift;
+
+    my $sth = $dbh->prepare("SELECT r.resource_id, r.network_address, r.state
+                             FROM gantt_jobs_resources_visu g, moldable_job_descriptions m, resources r
+                             WHERE
+                                m.moldable_job_id = $job
+                                AND m.moldable_id = g.moldable_job_id
+                                AND g.resource_id = r.resource_id
+                            ");
+    $sth->execute();
+    my %h;
+    while (my @ref = $sth->fetchrow_array()) {
+        $h{$ref[0]}->{'network_addess'}=$ref[1];
+        $h{$ref[0]}->{'current_state'}=$ref[2];
+    }
+    $sth->finish();
+
+    return \%h;
+}
 
 # TIME CONVERSION
 
@@ -5011,6 +5025,39 @@ sub get_hostname_event($$){
     return(@results);
 }
 
+# Get events for the hostname given as parameter
+# If date is given, returns events since that date, else return the 30 last events.
+# args: database ref, network_address, date
+sub get_events_for_hostname($$$){
+    my $dbh = shift;
+    my $host = shift;
+    my $date = shift;
+    my $sth;
+    if ($date eq "") {
+        $sth = $dbh->prepare("SELECT *
+                              FROM event_log_hostnames, event_logs 
+                              WHERE
+                                  event_log_hostnames.event_id = event_logs.event_id
+                                  AND event_log_hostnames.hostname = '$host'
+                              LIMIT 0,30");
+    } else {
+        $sth = $dbh->prepare("SELECT *
+                              FROM event_log_hostnames, event_logs
+                              WHERE
+                                  event_log_hostnames.event_id = event_logs.event_id
+                                  AND event_log_hostnames.hostname = '$host'
+                                  AND event_logs.date >= " . sql_to_local($date));
+    }
+    $sth->execute();
+
+    my @results;
+    while (my $ref = $sth->fetchrow_hashref()) {
+        push(@results, $ref);
+    }
+    $sth->finish();
+
+    return(@results);
+}
 
 # Get events for the specified job
 # args: database ref, job id
